--- a/.gitignore
+++ b/.gitignore
@@ -286,3 +286,12 @@ __pycache__/
 *.btm.cs
 *.odx.cs
 *.xsd.cs
+
+# FitNesse
+FitNesseRoot/FitNesse/
+FitNesseRoot/RecentChanges/
+FitNesseRoot/TemplateLibrary/
+FitnesseRoot/files
+FitNesseRoot/files/testResults/
+FitnesseRoot/ErrorLog
+*.zip
