Complete user story for calculating prize  money
http://localhost:4114/PrizeCalculation?test

- Aestaetic changes to testpage.
- Gitignore is now a good template for FitNesse.

--- a/.gitignore
+++ b/.gitignore
@@ -290,6 +290,7 @@ __pycache__/
 # FitNesse
 FitNesseRoot/FitNesse/
 FitNesseRoot/RecentChanges/
+FitNesseRoot/RecentChanges.wiki
 FitNesseRoot/TemplateLibrary/
 FitnesseRoot/files
 FitNesseRoot/files/testResults/
