Player Registration and LogIn

--- a/OnlineLottery/OnlineLottery.csproj
+++ b/OnlineLottery/OnlineLottery.csproj
@@ -41,6 +41,10 @@
     <Compile Include="IPlayerInfo.cs" />
     <Compile Include="IPlayerManager.cs" />
     <Compile Include="IPlayerRegistrationInfo.cs" />
+    <Compile Include="PlayerInfo.cs" />
+    <Compile Include="PlayerManager.cs" />
+    <Compile Include="Test\PlayerRegistration.cs" />
+    <Compile Include="PlayerRegistrationInfo.cs" />
     <Compile Include="Test\PrizeDistributionForPayoutPool.cs" />
     <Compile Include="WinningsCalculator.cs" />
   </ItemGroup>
